SF-Perkin/force-app/main/default/objects/AWS_Connection__mdt/AWS_Connection__mdt.object-meta.xml
<CustomObject>
    <label>AWS Connection</label>
    <pluralLabel>AWS Connections</pluralLabel>
</CustomObject>