SF-Perkin/force-app/main/default/objects/AWS_Connection__mdt/fields/Access_Key__c.field-meta.xml
<CustomField>
    <fullName>Access_Key__c</fullName>
    <label>Access Key</label>
    <length>100</length>
    <type>Text</type>
</CustomField>