SF-Perkin/force-app/main/default/objects/AWS_Connection__mdt/fields/Amazon_Connect_Instance_ID__c.field-meta.xml
<CustomField>
    <fullName>Amazon_Connect_Instance_ID__c</fullName>
    <label>Amazon Connect Instance ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>