SF-Perkin/force-app/main/default/objects/AWS_Connection__mdt/fields/Secret_Key__c.field-meta.xml
<CustomField>
    <fullName>Secret_Key__c</fullName>
    <label>Secret Key</label>
    <length>100</length>
    <type>Text</type>
</CustomField>